fix notification color and spacing

--- a/src/stylesheets/header.less
+++ b/src/stylesheets/header.less
@@ -46,7 +46,7 @@
 }
 
 #sk-badge {
-    background-color: #e74c3c;
+    background-color: @brand-danger;
     border-radius: 100px;
     box-shadow: 0 0 0 1px #cf2615;
     color: white;
