--- a/src/stylesheets/notification.less
+++ b/src/stylesheets/notification.less
@@ -12,7 +12,7 @@
         border-top: 1px solid rgba(0, 0, 0, .1);
         background-color: white;
         p {
-            margin: 18px;
+            margin: 10px 18px;
             a {
                 color: @sk-blue;
             }
@@ -43,7 +43,7 @@
         }
 
         &.sk-notification-error {
-            background-color: red;
+            background-color: @brand-danger;
             color: white;
             .sk-notification-close {
                 color: white;
@@ -57,11 +57,11 @@
 
     .sk-notification-enter-active {
         .transition(height 500ms);
-        height: 72px;
+        height: 56px;
     }
 
     .sk-notification-leave {
-        height: 72px;
+        height: 56px;
     }
 
     .sk-notification-leave-active {
